# wraith

./: .gitignore
backend/: ai_client.py  evolution.py  main.py  pyproject.toml  swarm.py  tournament.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: EvolutionPanel.tsx
frontend/src/hooks/: useBattleSocket.ts
frontend/src/renderer/: BattleCanvas.tsx
frontend/src/store/: battleStore.ts
