[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "anthropic>=0.102.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.2",
    "supabase>=2.30.0",
    "uvicorn>=0.47.0",
    "websockets>=15.0.1",
]
